--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,24 @@
     box-sizing: border-box;
     font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+:root{
+    --linear-gradient:  linear-gradient(90deg, #38bdf8, #6d28d9, #4c1d95);
+}
+
+#container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--linear-gradient);
+    color: #d1d5db;
+}
+
+
+#calculator{
+    background-color: #262626;
+    padding: 40px;
+
+}
