--- a/css/style.css
+++ b/css/style.css
@@ -26,5 +26,23 @@
 #calculator{
     background-color: #262626;
     padding: 40px;
+    border-radius: 8px;
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.323 );
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
 
+#calculator h2{
+    font-size: 30px;
+    position: relative;
+}
+
+#calculator h2::before{
+    position: absolute;
+    content: '';
+    height: 3px;
+    width: 150px;
+    background: var(--linear-gradient);
+    bottom: 5px;
 }
