modificações no hover do botão calcular

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 :root{
     --linear-gradient:  linear-gradient(90deg, #38bdf8, #6d28d9, #4c1d95);
+    --linear-gradient-hover:  linear-gradient(90deg, #34ace0, #5d23ba, #3f1878);
 }
 
 #container{
@@ -90,6 +91,12 @@
     font-size: 18px;
     border-radius: 4px;
     cursor: pointer;
+    transition: all 0.3s ease-in-out ;
+}
+
+#calculate:hover{
+    transition: all 0.3s ease-in-out;
+    background: var(--linear-gradient-hover);
 }
 
 
